--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shipmunk-core",
+  "name": "uberforx-core",
   "version": "0.0.0",
   "main": "server/server.js",
   "scripts": {
@@ -11,7 +11,6 @@
     "errorhandler": "^1.1.1",
     "loopback": "^2.5.0",
     "loopback-boot": "^2.2.0",
-    "loopback-connector-mongodb": "^1.5.0",
     "loopback-connector-mysql": "^1.4.7",
     "loopback-datasource-juggler": "^2.7.0",
     "serve-favicon": "^2.0.1"
@@ -20,6 +19,7 @@
     "loopback-explorer": "^1.1.0"
   },
   "devDependencies": {
-    "jshint": "^2.5.6"
+    "jshint": "^2.5.6",
+    "loopback-connector-mongodb": "^1.5.0"
   }
 }
